--- a/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
@@ -70,7 +70,7 @@ else
                             <a class="text-light text-decoration-none btn btn-primary btn-outline-info m-2 p-2 pt-2 pb-2 rounded-3 fw-bold"
                                asp-action="OrderItems" asp-route-id="@order.OrderId">
 
-                                @order.OrderItems.Count
+                                @order.OrderItems!.Count
                             </a>
                         </td>
                         <td class="col-1 ">
