Code cleaning & exception handling.

--- a/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
 else
 {
     <script>
-@*        localStorage.removeItem('cart');
-        sessionStorage.clear();*@
+        localStorage.removeItem('cart');
+        sessionStorage.clear();
     </script>
 }
 
