Added default role 'Customer'. Product.Quanttity will be subtracted upon submitting a new order. Product.Quantity == 0 => "Out of Stock". Unauthorized user will be redirected to the Login page.

--- a/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
@@ -59,10 +59,22 @@ else
                     <tr>
                         <td class="col-3 fw-bold">@product.Name</td>
                         <td class="col-2 fw-bold  text-success">@product.Category!.Name</td>
-                        <td class="col-1 text-secondary fw-bold  @(product.Quantity <= 10 ? "bg-warning" : "")
-                            bg-opacity-25">
-                            @product.Quantity
-                        </td>
+                        @if(product.Quantity == 0 )
+                        {
+                            <td class="col-1 text-secondary fw-bold bg-danger bg-opacity-25">
+                                Out of Stock
+                            </td>
+                        }
+                        else if (product.Quantity <= 10)
+                        {
+                            <td class="col-1 text-secondary fw-bold bg-warning bg-opacity-25">
+                                @product.Quantity
+                            </td>
+                        }
+                        else
+                        {
+                            <td class="col-1 text-secondary fw-bold bg-opacity-25">@product.Quantity</td>
+                        }
 
                         @if (product.OnSale)
                         {
