--- a/ECommerceWithAuth.MVC/Views/Shared/Components/StatisticsComponent.razor
+++ b/ECommerceWithAuth.MVC/Views/Shared/Components/StatisticsComponent.razor
@@ -15,6 +15,12 @@
     }
 </style>
 
+<div class="text-center">
+    <h1 class="display-6 fw-normal font-monospace p-2 mb-5" style="color:rgb(17, 59, 45);">
+        Sales Statistics
+    </h1>
+</div>
+
 <div class="vertical-center">
     <div class="container mt-3">
         <div class="row justify-content-center fw-bold gx-5 m-0">
