Check the previous commit message.

--- a/ECommerceWithAuth.MVC/Views/Statistics/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Statistics/Index.cshtml
@@ -3,7 +3,6 @@
 }
 
 <div>
-    @(await Html.RenderComponentAsync<ECommerceWithAuth.MVC.Views.Shared.Components.
-    StatisticsComponent>(RenderMode.ServerPrerendered))
+    @(await Html.RenderComponentAsync<StatisticsComponent>(RenderMode.ServerPrerendered))
 </div>
 
