Added the alternative permuim key for the exchange rates, if the free one fails. Fixed a bug in Order.OrderPlaced when creating a new one, by ToString("yyy-MM-dd"). Switched the auth back on in the API for GetAllProducts(). Old token will be removed after logging in. ShopController will pass in the token as parameter input to ShopComponent.

--- a/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
@@ -101,7 +101,7 @@ else
                             <span class="text-decoration-none btn-outline-warning link-primary rounded-pill p-2
                                   discountUntilModal" title="Click to update"
                                   onclick="openDiscountUntilModal('@JsonConvert.SerializeObject(product)')">
-                                @product.DiscountUntil.ToShortDateString()
+                                @product.DiscountUntil.ToString("yyy-MM-dd")
                             </span>
                         </td>
 
