--- a/ECommerceWithAuth.MVC/Views/Product/AddProduct.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/AddProduct.cshtml
@@ -38,7 +38,7 @@
 
                 <div class=" col-md-3 col-lg-2 mb-3 m-auto">
                     <label asp-for="DiscountUntil">Discount until</label>
-                    <input asp-for="DiscountUntil" type="date" value="@DateTime.Now.ToShortDateString()" 
+                    <input asp-for="DiscountUntil" type="date" value="@DateTime.Now.ToString("yyy-MM-dd")"
                            class="form-control"/>
                     <span asp-validation-for="DiscountUntil" class="text-danger"></span>
                 </div>
