--- a/ECommerceWithAuth.MVC/Views/Product/DeleteProduct.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/DeleteProduct.cshtml
@@ -41,7 +41,7 @@
 
                 <div class=" col-md-3 col-lg-2 mb-3 m-auto">
                     <label asp-for="DiscountUntil">Discount until</label>
-                    <input asp-for="DiscountUntil" type="date" value="@DateTime.Now.ToShortDateString()"
+                    <input asp-for="DiscountUntil" type="date"
                            class="form-control" min="1" max="99" disabled/>
                     <span asp-validation-for="DiscountUntil" class="text-danger"></span>
                 </div>
