--- a/ECommerceWithAuth.MVC/Views/Shared/Components/CartComponent.razor
+++ b/ECommerceWithAuth.MVC/Views/Shared/Components/CartComponent.razor
@@ -40,7 +40,7 @@
     }
     else
     {
-        <div class="mb-5 pb-3 w-75 m-auto" style="min-height:35vh ">
+        <div class="mb-5 pb-3 w-75 m-auto" style="min-height:35vh" onmouseout="getCartItemsCount()" onmousemove="getCartItemsCount()">
             @foreach (var item in cartItems)
             {
                 <ul class="list-group h5 p-3 mb-4 list-group-item border-0 text-success
